force-app/main/default/objects/skedHC__Expense__c/skedHC__Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>