force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Amount__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Amount__c</fullName>
    <label>Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>