force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Description__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>