force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Distance__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>