force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Distance_Unit__c</fullName>
    <label>Distance Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>