force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Job__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>