force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Travel_Time_Hrs__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Travel_Time_Hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Travel Time (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>