force-app/main/default/objects/skedHC__Expense__c/fields/skedHC__Travel_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Travel_Time_Mins__c</fullName>
    <label>Travel Time (Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>