force-app/main/default/objects/skedHC__Expense__c/listViews/skedHC__All.listView-meta.xml
<ListView>
    <fullName>skedHC__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>